--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body{
 body a{
 	text-decoration:none;
 }
+* ul{
+	list-style-type:none;
+}
 /*header part*/
 	/*upper-header*/
 header{
@@ -73,7 +76,7 @@ header{
 }
 	/*main header*/
 #header-image{
-	
+	height:100%;
 }
 #company-name{
 	position:absolute;
@@ -92,6 +95,30 @@ header{
 #desc-text{
 	color:#fff;
 	text-shadow:1px 1px 2px #000;
+}
+	/*lower header*/
+.lower-header{
+	height:50px;
+	background:#4dbded;
+	text-align:center;
+}
+#menu{
+	float:left;
+	padding:15px;
+}
+#cart{
+	float:right;
+	padding:15px;
+}
+#search{
+	display:inline-block;
+	padding:15px;
+}
+#hidden-menu{
+	
+}
+#search-cathegory{
+	
 }
 /*content part*/
 #content-sec{
